remove (broken) mimpmap support check, disable use of mipmaps and align texture filter

BUG: 296289
FIXED-IN: 4.9
REVIEW: 105249